<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="title_activity_login">Log ind</string>
    <string name="toast_welcome">Velkommen %1$s</string>
    <string name="prompt_guardid">Vagt id</string>
    <string name="prompt_guardid_info">Indtast vagt id</string>
    <string name="prompt_devicename">Valgfrit enhedsnavn</string>
    <string name="prompt_devicename_info">Enhedsnavnet gør det nemmere at skelne mellem enhederne på hjemmesiden</string>
    <string name="prompt_username">Brugernavn</string>
    <string name="prompt_password">Kode</string>
    <string name="action_sign_in_short">Log ind</string>
    <string name="login_progress_signing_in">Kontakter server&#8230;</string>
    <string name="login_progress_synchronizing">Synkroniserer data&#8230; Behandler %1$d/%2$d</string>
    <string name="error_guard_not_found">Vagt ikke fundet i databasen</string>
    <string name="error_invalid_guardid">Ugyldigt vagt id</string>
    <string name="error_incorrect_username">Forkert brugernavn</string>
    <string name="error_incorrect_password">Forkert kode</string>
    <string name="error_field_required">Dette felt er påkrævet</string>
    <string name="title_internet_missing">Mangler internet forbindelse</string>
    <string name="message_no_internet_connection">Kunne ikke oprette forbindelse til internettet</string>
    <string name="title_reset_circuit">Genstart %1$s</string>
    <string name="message_reset_circuit">Dette vil genstarte kredsen for alle vægtere. \n\n Genstart alligevel?</string>
    <string name="app_name">GuardSwift</string>
    <string name="login">Log ind</string>
    <string name="logout">Log ud</string>
    <string name="title_drawer_circuits">Runderinger</string>
    <string name="title_drawer_districtwatches">Områdevagter</string>
    <string name="title_drawer_my_alarms">Mine alarmer</string>
    <string name="title_drawer_all_alarms">Alle alarmer</string>
    <string name="title_drawer_logout">Log ud</string>
    <string name="title_select_circuit">Vælg kreds</string>
    <string name="title_circuitunit">Tilsyn</string>
    <string name="title_tasks_new">Nye opgaver</string>
    <string name="title_tasks_district_watch">Område vagt</string>
    <string name="title_tasks_old">Gamle opgaver</string>
    <string name="visited">Tilset</string>
    <string name="title_not_visited">Mangler tilsyn</string>
    <string name="title_alarms">Alarmer</string>
    <string name="title_alarms_new">Nye alarmer</string>
    <string name="title_alarms_assigned">Tildelte alarmer</string>
    <string name="title_alarms_old">Gamle alarmer</string>
    <string name="title_internal">Intern</string>
    <string name="title_events">Hændelser</string>
    <string name="title_event_add">Tilføj hændelse</string>
    <string name="title_event_type">Type</string>
    <string name="title_event_amount">Antal</string>
    <string name="title_event_location">Hvor</string>
    <string name="title_event_remarks">Bemærkninger</string>
    <string name="title_circuits">Runderinger</string>
    <string name="title_messages">Beskeder</string>
    <string name="title_checklist">Checkliste</string>
    <string name="title_client">Kunde</string>
    <string name="title_guard_login">Vagt login</string>
    <string name="title_activity_circuitunit">Tilsyn</string>
    <string name="title_activity_districtwatch">Områdevagt</string>
    <string name="action_update_app">Opdater app</string>
    <string name="action_previous">Forrige</string>
    <string name="action_next">Næste</string>
    <string name="action_save">Gem</string>
    <string name="action_set_arrived">Meld ankommet</string>
    <string name="action_set_finished">Meld afsluttet</string>
    <string name="event_accept">Accepter</string>
    <string name="event_pending">Afventer</string>
    <string name="event_arrived">Ankommet</string>
    <string name="event_finished">Afsluttet</string>
    <string name="event_aborted">Afbrudt</string>
    <string name="event_extra_time">Ekstra tid</string>
    <string name="onActionAbort">Afbryd</string>
    <string name="abort_alarm">Afbryd alarm</string>
    <string name="abort_circuitunit">Afbryd tilsyn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="event">hændelse</string>
    <string name="mark_alarm_accepted">Accepter alarm</string>
    <string name="mark_arrived">Meld ankommet hos %1$s</string>
    <string name="mark_finished">Meld afsluttet</string>
    <string name="marked_circuitunit_taken">%1$s varetager tilsyn</string>
    <string name="marked_alarm_accepted">%1$s accepteret %2$s</string>
    <string name="marked_arrived">%1$s ankommet %2$s</string>
    <string name="marked_finished">%1$s afsluttet %2$s</string>
    <string name="add_event">Tilføj hændelse</string>
    <string name="onActionFinish">Afslut</string>
    <string name="finished">Afsluttet</string>
    <string name="add_type">Tilføj type</string>
    <string name="add_location_area">Tilføj lokation/område</string>
    <string name="add_information">Tilføj information</string>
    <string name="no_data_found">Ingen data fundet</string>
    <string name="internal_information">Intern information</string>
    <string name="successfully_added_var">Tilføjede %1$s</string>
    <string name="working">Arbejder…</string>
    <string name="new_update">Ny opdatering</string>
    <string name="download_now">Hent nu</string>
    <string name="retry">Prøv igen</string>
    <string name="could_not_create_or_access_downloadfolder">Kunne ikke oprette eller tilgå mappe til download</string>
    <string name="could_not_locate_file">Kunne ikke finde filen</string>
    <string name="could_not_connect_to_server">Kunne ikke forbinde til server</string>
    <string name="not_possible_until_arrived">Ikke muligt før ankommet!</string>
    <string name="checklist_header_circuit_start">Checkliste for opstart</string>
    <string name="checklist_header_circuit_end">Checkliste for afslutning</string>
    <string name="checklist_subheader_check_all_to_continue">Afkryds alle for at fortsætte</string>
    <string name="show_all">Vis alle</string>
    <string name="restart">Genstart</string>
    <string name="no_circuitunits_found_for_circuit">Ingen tilsyn fundet på kreds %1$s</string>
    <string name="no_more_circuitunits">Ikke flere tilsyn</string>
    <string name="no_more_district_watches">Ikke flere områdevagter</string>
    <string name="choose_circuit">Vælg kreds</string>
    <string name="charging_screen_kept_turned_on">Oplader - Skærmen holdes tændt</string>
    <string name="distance">Afstand:</string>
    <string name="km">km</string>
    <string name="meters">meter</string>
    <string name="times_supervised">%1$d/%2$d</string>
    <string name="shared_with_other_circuit">Delt med en anden kreds</string>
    <string name="missing_device_gps_coordinate">Mangler GPS koordinat for enhed</string>
    <string name="new_client_location">Ny placering hos kunden</string>
    <string name="remark">Bemærkning</string>
    <string name="event_successfully_added_locally">Hændelse gemt på telefonen</string>
    <string name="event_successfully_saved_online">Hændelse gemt online!</string>
    <string name="title_event_observed">Hændelse observeret</string>
    <string name="not_specified">Ikke specificeret</string>
    <string name="add_new_location">Tilføj ny lokation</string>
    <string name="new_remark">Ny bemærkning</string>
    <string name="previous_remarks">Tidligere bemærkninger</string>
    <string name="no_previous_remarks">Ingen tidligere bemærkninger</string>
    <string name="new_alarm">Ny alarm</string>
    <string name="ignore">Ignorer</string>
    <string name="onActionAccept">Accepter</string>
    <string name="approve">Godkend</string>
    <string name="save_to_list">Gem på liste</string>
    <string name="summary">Opsummering</string>
    <string name="save">Gem</string>
    <string name="unable_to_get_clientdata">Kunne ikke hente data for kunden</string>
    <string name="keybox">Nøgleboks</string>
    <string name="bypass">Forbikobler</string>
    <string name="controlPanel">Betjeningspanel</string>
    <string name="installer">Installatør</string>
    <string name="guardCode">Vagtkode</string>
    <string name="onActionOpen">Åben</string>
    <string name="alarm">Alarm</string>
    <string name="open_alarm_details">Åben detaljer om alarm?</string>
    <string name="extra_circuitunit">Extra tilsyn</string>
    <string name="create_extra_circuitunit">Opret extra tilsyn</string>
    <string name="extra_time_spend">Anvendt ekstra tid</string>
    <string name="extra_circuitunit_created_title">Extra tilsyn oprettet</string>
    <string name="extra_circuitunit_created_message">Tilsynet er nu oprettet og tilføjet til listen af opgaver\n<b>Bemærk:</b> Listen skal opdateres før det nye tilsyn vises\n\nÅben ekstra tilsyn nu?</string>
    <string name="time_start">Start tidspunkt</string>
    <string name="time_end">Slut tidspunkt</string>
    <string name="no_more_tasks">Ikke flere opgaver</string>
    <string name="distance_to_client">Afstand til kunden er %1$s %2$s</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="event_checkpoint">Checkpoint</string>
    <string name="start_navigation">Start navigation</string>
    <string name="not_relevant">Ikke relevant</string>
    <string name="add_message">Tilføj besked</string>
    <string name="no_contacts_found">Ingen kontakpersoner fundet</string>
    <string name="missing_description">Beskrivelse mangler</string>
    <string name="title_alarm">Alarm</string>
    <string name="new_update_available">Ny opdatering tilgængelig</string>
    <string name="current_and_latest_version">Nuværende version %1$s\nNyeste version: %2$s</string>
    <string name="downloading_update">Henter opdatering…</string>
    <string name="download_canceled">Download afbrudt</string>
    <string name="error_loading">Fejl under indlæsning</string>
    <string name="action">Handling</string>
    <string name="edit">Rediger</string>
    <string name="delete">Slet</string>
    <string name="confirm_delete">Slet %1$s?</string>
    <string name="confirm_suggestion_removal">Fjern forslaget: %1$s?</string>
    <string name="remove_suggestion">Fjern forslag</string>
    <string name="successfully_removed_suggestion">Forslag fjernet fra listen</string>
    <string name="error_cannot_edit_or_delete_checkpoint">Kan ikke redigere eller slette checkpoints</string>
    <string name="filter">Filter</string>
    <string name="filter_by_event">Filtrer efter hændelse</string>
    <string name="results_found">Fandt %1$d resultater</string>
    <string name="login_to_respond_to_alarm">Log ind for at reagere på alarmen</string>
    <string name="receive_alarms">Modtag alarmer</string>
    <string name="write_report">Udfyld rapport</string>
    <string name="task_description">Runderingsbeskrivelse</string>
    <string name="title_people">Personer</string>
    <string name="client_contacts">Kontaktpersoner</string>
    <string name="mobile_number">Mobil nummer</string>
    <string name="device_name">Navn på enhed</string>
    <string name="connect_to_mobile">Tilknyt mobil nummer</string>
    <string name="choose_client">Vælg kunde</string>
    <string name="walking">Gående</string>
    <string name="driving">Kørende</string>
    <string name="planned_timespan_desc">Tidligste og seneste mulige ankomst tidspunkter</string>
    <string name="create_task">Opret tilsyn</string>
    <string name="extra_task_expire_date">Dato for udløb af det midlertidige tilsyn</string>
    <string name="expire_date">Udløbsdato</string>
    <string name="earliest_time">Tidligste tidspunkt</string>
    <string name="latest_time">Seneste tidspunkt</string>
</resources>