<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<PreferenceCategory-->
        <!--android:title="@string/device_name">-->

        <EditTextPreference
            android:title="@string/device_name"
            android:key="installation_device_name"
            android:inputType="text"
            android:dialogTitle="@string/device_name" />


    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory-->
        <!--android:title="@string/connect_to_mobile">-->

        <EditTextPreference
            android:title="@string/connect_to_mobile"
            android:key="installation_sms_to"
            android:inputType="phone"
            android:dialogTitle="@string/mobile_number" />

    <!--</PreferenceCategory>-->



</PreferenceScreen>