<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    tools:ctx="com.guardswift.ui.activity.MainActivity">

    <!--<TextView-->
        <!--android:id="@+id/header"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:gravity="center"-->
        <!--android:padding="5dp"-->
        <!--android:text="@string/summary"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:textColor="@android:color/holo_blue_dark"-->
        <!--android:textStyle="bold" />-->

    <!--<com.beardedhen.androidbootstrap.BootstrapButton-->
        <!--android:id="@+id/btn_save"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_margin="5dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:text="@string/save"-->
        <!--app:bootstrapBrand="info"-->
        <!--app:bootstrapSize="lg"-->
        <!--app:buttonMode="regular"-->
        <!--app:showOutline="false"-->
        <!--app:roundedCorners="true"-->
        <!--app:fontAwesomeIcon="fa_cloud_upload" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Event -->

            <TextView
                style="@style/MediumBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_event_observed" />

            <TextView
                android:id="@+id/tv_event"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <!-- Amount -->

           <TextView
                style="@style/MediumBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_event_amount" />

            <TextView
                android:id="@+id/tv_amount"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <!-- People -->

            <TextView
                style="@style/MediumBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_people" />

            <TextView
                android:id="@+id/tv_people"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <!-- Location -->

            <TextView
                style="@style/MediumBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_event_location" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <!-- Remark -->

            <TextView
                style="@style/MediumBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_event_remarks" />

            <TextView
                android:id="@+id/tv_remarks"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>